--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URI=mongodb+srv://testUser:testPassword@cluster0.abcde.mongodb.net/testDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://testUser:testPassword@cluster.uzqisyr.mongodb.net/?
 JWT_SECRET=JWT_example
