--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
+PG_USER=test_user
+PG_PASSWORD=test_password
+PG_HOST=localhost
+PG_PORT=5432
+PG_DATABASE=test_DB
+JWT_SECRET=secretForDB
+RESET_DB_ON_START=truae
 PORT=3000
-MONGO_URI=mongodb+srv://testUser:testPassword@cluster.uzqisyr.mongodb.net/?
-JWT_SECRET=JWT_example
-RESET_DB_ON_START=false
