--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
   },
   "include": ["src"]
 }
