--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-PG_USER=test_user
-PG_PASSWORD=test_password
-PG_HOST=localhost
+POSTGRES_USER=test_user
+POSTGRES_PASSWORD=test_password
+PG_HOST=db
 PG_PORT=5432
-PG_DATABASE=test_DB
+POSTGRES_DB=test_DB
 JWT_SECRET=secretForDB
-RESET_DB_ON_START=truae
+RESET_DB_ON_START=true
 PORT=3000
